# scilab

./: .gitignore  .gitlab-ci.yml  BUILDING-macOS.md  README.md
.gitlab-ci/: build.bat  build.sh  build.yml  cleanup_windows.ps1  postbuild.yml  prebuild.bat  prebuild.sh  prebuild.yml  test.yml
docs/: README.md
docs/building/: macos.md
docs/design/: gpu-acceleration.md  (+4 more)
news/: feed.xml
scilab/: CHANGES.md  Makefile.am  Makefile.in  Makefile.incl.am  Scilab.sln  Scilab_f.sln  Scilab_f2c.sln  Version.incl  build-macos.sh  build.incl.xml  build.incl.xml.in  build.qa.incl.xml  configure  configure.ac  package-macos.sh  reapply-macos-fixes.sh  scilab-lib.properties.in  scilab.properties.vc
scilab/modules/atoms/: Makefile.am  Makefile.in  atoms.iss
scilab/modules/atoms/etc/: repositories
scilab/modules/atoms/gui/: atoms_browser.css  atoms_browser.html  atoms_browser.js
scilab/modules/atoms/help/en_US/: _atomsGettingStarted.xml  atomsAutoload.xml  atomsAutoloadAdd.xml  atomsAutoloadDel.xml  atomsAutoloadList.xml  atomsCategoryList.xml  atomsCheckModule.xml  atomsDepTreeShow.xml  atomsGetConfig.xml  atomsGetInstalled.xml  atomsGetInstalledPath.xml  atomsGetLoaded.xml  atomsGetLoadedPath.xml  atomsInstall.xml  atomsIsInstalled.xml  atomsIsLoaded.xml  atomsList.xml  atomsLoad.xml  atomsQuit.xml  atomsRemove.xml  atomsRepositoryAdd.xml  atomsRepositoryDel.xml  atomsRepositoryList.xml  atomsSaveConfig.xml  atomsSearch.xml  atomsSetConfig.xml  atomsShow.xml  atomsTest.xml  atomsUpdate.xml
scilab/modules/atoms/macros/atoms_gui/: atomsGui.sci  cbAtomsGui.sci
scilab/modules/terminal/: Makefile.am  Makefile.in  build.xml
scilab/modules/terminal/etc/: XConfiguration-terminal.xml  XConfiguration-terminal.xsl  terminal.quit  terminal.start
scilab/modules/terminal/help/en_US/: addchapter.sce  terminal.xml
scilab/modules/terminal/locales/: terminal.pot
scilab/modules/terminal/macros/: buildmacros.sce  terminal.sci
scilab/modules/terminal/src/java/org/scilab/modules/terminal/: Pty.java  PtyTtyConnector.java  ScilabTerminal.java  TerminalAutoOpen.java  TerminalOptions.java  TerminalTab.java  TerminalTabFactory.java
scilab/modules/terminal/tests/unit_tests/: terminal.tst
(+3591 files in other folders)
